<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <string name="nearMeImageView">Near Me Icon Image</string>
    <string name="enterCityTextView">Enter a city&#8230;</string>
    <string name="enterCityEditView">Please Enter a City or Zip Code</string>
    <string name="getWeatherButton">What\'s The Weather? </string>
    <string name="aNote">(US cites only)</string>
    <string name="switchUnit">&#176;C &#176;F</string>
    <string name="switchC">&#176;C</string>
    <string name="switchF">&#176;F</string>
    <string name="weatherTemp">102&#176;</string>
    <string name="locationTextView">Location</string>
    <string name="localCondition">Clear</string>
    <string name="localConditionDescription">Cloud Cover</string>
    <string name="localConditionIcon">Condition Icon</string>
    <string name="localForecastHigh">50&#176;</string>
    <string name="localForecastLow">12&#176;</string>
    <string name="localForeCastHighIcon">Forecast High Icon</string>
    <string name="localForecastLowIcon">Forecast Low Icon</string>
    <string name="localSunrise">5:30 AM</string>
    <string name="localSunset">7:30 PM</string>
    <string name="locationGPSFix">GPS Fix</string>
</resources>
